<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dial_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/dial_number" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/audio_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_button_ripple"
            android:text="@string/audio_call"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/unregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:background="@drawable/rounded_button_ripple"
            android:text="@string/unregister"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:background="@drawable/rounded_button_ripple"
            android:text="@string/logout"
            android:textColor="@color/colorAccent" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/hang_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:background="@drawable/rounded_button_ripple"
            android:text="@string/hang_up"
            android:textColor="@color/colorAccent"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/transfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:background="@drawable/rounded_button_ripple"
            android:text="@string/transfer"
            android:textColor="@color/colorAccent"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/attended_transfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_ripple"
            android:text="@string/attended_transfer"
            android:textColor="@color/colorAccent"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/add_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:background="@drawable/rounded_button_ripple"
            android:text="@string/add_call"
            android:textColor="@color/colorAccent"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp">
        <Button
            android:id="@+id/switch_calls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:background="@drawable/rounded_button_ripple"
            android:text="@string/switch_calls"
            android:textColor="@color/colorAccent"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/merge_calls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:background="@drawable/rounded_button_ripple"
            android:text="@string/merge_calls"
            android:textColor="@color/colorAccent"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>


    <Button
        android:id="@+id/accept_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button_ripple"
        android:text="@string/accept_call"
        android:textColor="@color/colorAccent"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/call_buttons"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:visibility="gone"
        tools:visibility="visible">

        <Switch
            android:id="@+id/toggle_mute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button_ripple"
            android:text="@string/mute"
            android:textColor="@color/colorAccent" />

        <Switch
            android:id="@+id/toggle_hold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button_ripple"
            android:text="@string/hold"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/call_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/caller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            tools:text="John Doe" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            tools:text="1 second" />

    </LinearLayout>

</LinearLayout>