<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <org.linphone.mediastream.video.display.GL2JNIView
        android:id="@+id/video_rendering"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <SurfaceView
        android:id="@+id/video_preview"
        android:layout_width="120dp"
        android:layout_height="200dp"/>

    <Button
        android:id="@+id/video_hang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="220dp"
        android:text="@string/hang_up"/>

    <Button
        android:id="@+id/video_mute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="220dp"
        android:layout_marginStart="16dp"
        android:text="@string/mute"/>

    <Button
        android:id="@+id/video_speaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="16dp"
        android:text="@string/speaker"/>

</FrameLayout>